syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/field_mask.proto";
import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";
package ds_alertgroup;


message DsAlertGroupBean {

    int32 id= 1;
    optional string alert_instance_ids=2;
    optional int32 create_user_id= 3;
    optional string group_name= 4;
    optional string description= 5;
    optional string create_time= 6;
    optional string update_time= 7;
}


// Generated according to https://cloud.google.com/apis/design/standard_methods
service DsAlertGroupBeanService {
  rpc ListDsAlertGroupBeans(ListDsAlertGroupBeansRequest) returns (ListDsAlertGroupBeansResponse) {
    option (google.api.http) = {
      get: "/v1alpha1/DsAlertGroupBeans"
    };
  }

  rpc GetDsAlertGroupBean(GetDsAlertGroupBeanRequest) returns (DsAlertGroupBean) {
    option (google.api.http) = {
      get: "/v1alpha1/{name=DsAlertGroupBeans/*}"
    };
  }

  rpc CreateDsAlertGroupBean(CreateDsAlertGroupBeanRequest) returns (DsAlertGroupBean) {
    option (google.api.http) = {
      post: "/v1alpha1/DsAlertGroupBeans"
      body: "DsAlertGroupBean"
    };
  }

  rpc UpdateDsAlertGroupBean(UpdateDsAlertGroupBeanRequest) returns (DsAlertGroupBean) {
    option (google.api.http) = {
      patch: "/v1alpha1/{DsAlertGroupBean.name=DsAlertGroupBeans/*}"
      body: "DsAlertGroupBean"
    };
  }

  rpc DeleteDsAlertGroupBean(DeleteDsAlertGroupBeanRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/v1alpha1/{name=DsAlertGroupBeans/*}"
    };
  }
}

// message DsAlertGroupBean {
// ! This should be defined elsewhere
// }

message ListDsAlertGroupBeansRequest {
  // The parent resource name, for example, "shelves/shelf1"
  string parent = 1;

  // The maximum number of items to return.
  int32 page_size = 2;

  // The next_page_token value returned from a previous List request, if any.
  string page_token = 3;
}

message ListDsAlertGroupBeansResponse {
  // The field name should match the noun "DsAlertGroupBean" in the method name.
  // There will be a maximum number of items returned based on the page_size field in the request.
  repeated DsAlertGroupBean DsAlertGroupBeans = 1;

  // Token to retrieve the next page of results, or empty if there are no more results in the list.
  string next_page_token = 2;
}

message GetDsAlertGroupBeanRequest {
  // The field will contain name of the resource requested.
  string name = 1;
}

message CreateDsAlertGroupBeanRequest {
  // The parent resource name where the DsAlertGroupBean is to be created.
  string parent = 1;

  // The DsAlertGroupBean id to use for this DsAlertGroupBean.
  string DsAlertGroupBean_id = 2;

  // The DsAlertGroupBean resource to create.
  // The field name should match the Noun in the method name.
  DsAlertGroupBean DsAlertGroupBean = 3;
}

message UpdateDsAlertGroupBeanRequest {
  // The DsAlertGroupBean resource which replaces the resource on the server.
  DsAlertGroupBean DsAlertGroupBean = 1;

  // The update mask applies to the resource. For the `google.protobuf.FieldMask` definition,
  // see https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#google.protobuf.FieldMask
  google.protobuf.FieldMask update_mask = 2;
}

message DeleteDsAlertGroupBeanRequest {
  // The resource name of the DsAlertGroupBean to be deleted.
  string name = 1;
}
